--- a/toDos.html
+++ b/toDos.html
@@ -20,7 +20,12 @@
     />
   </head>
   <body>
-    <div class="container-fluid">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-6 col-md-4"></div>
+        <div class="col-xs-6 col-md-4"></div>
+        <div class="col-xs-6 col-md-4"></div>
+      </div>
       <script src="./toDos.js"></script>
     </div>
   </body>
